Fix radar point counter issues with ROS2 bags

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,11 @@ venv.bak/
 *.csv
 *.dat
 */radar_experiment_data/* 
+# Cursor rules
+.cursor/rules/
+
+# Cursor rules
+.cursor/rules/
+
+# Cursor rules
+.cursor/rules/
