--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+radar_analyzer_issues.md
 # Distribution / packaging
 .Python
 build/
@@ -65,8 +65,3 @@ venv.bak/
 # Cursor rules
 .cursor/rules/
 
-# Cursor rules
-.cursor/rules/
-
-# Cursor rules
-.cursor/rules/
